--- a/index.html
+++ b/index.html
@@ -1001,12 +1001,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-  <div id="project" class="bio">
+<div id="project" class="bio">
   <h1 class="md-heading text-left">
      <i class="fa fa-tasks" aria-hidden="true"></i>
     Project
   </h1>
-</div>
+
 
 <li class="pub-item">
   <div class="title">
@@ -1015,18 +1015,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="authors">
     <font style="font-size:11pt;">
-      Funded by The Japan Society for the Promotion of Science (JSPS).
+      Funded by the Japan Society for the Promotion of Science (JSPS).
     </font>
   </div>
 
   <div class="publish">
     Co-Investigator, 2023.11–2025.11
-    <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-23KF0225/"
-       target="_blank" style="margin-left:6px;">
-      <i class="fas fa-external-link-square-alt" style="font-size:16px; vertical-align:middle;"></i>
-    </a>
   </div>
 </li>
+
+
+<li class="pub-item">
+  <div class="title">
+    <a href="https://forskningsprosjekter.ihelse.net/prosjekt/2020049">Pre-Clinical Studies for Multi-node Leadless Cardiac Pacemaker
+  </div></a>
+
+  <div class="authors">
+    <font style="font-size:11pt;">
+      Funded by the South-Eastern Norway Regional Health Authority.
+    </font>
+  </div>
+
+  <div class="publish">
+    Postdoktorstipendiat, 2021.11–2023.10
+  </div>
+</li>
+
+</div>
 
 
 
