--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="reviewer-column">IEEE Transactions on Biomedical Circuits and Systems (TBCAS)</div>
       </div>
 
-       <div class="reviewer-title">Journal Referee:</div>
+       <div class="reviewer-title">Conference Referee:</div>
       <div class="reviewer-section">
         <div class="reviewer-column">20th European Conference on Antennas and Propagation (EuCAP2026)</div>
         <div class="reviewer-column">IEEE Wireless Power Technology Conference and Expo (WPTCE2023) </div>
