Update email address to a new message

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           Advanced Wireless and Communication Research Center, University of Electro-Communications
         </div>
         <div id="my-email" class="text-grey-light">
-          maoyuan.li.bit [at] gmail.com
+          事已至此，先吃饭吧
         </div>
 
 	</div>
