--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </svg>
   </a>
 
+     <!-- Language Switch (top-right) -->
+    <div style="position:absolute; top:10px; right:20px;">
+      <a href="index.html" style="margin-right:10px; font-weight:bold;">EN</a>
+      <a href="index_cn.html" style="font-weight:bold;">中文</a>
+    </div>
+
   <div class="trigger">
     <a class="page-link" href="#bio"><b>Biography</b></a>
     <a class="page-link" href="#timeline"><b>Experiences</b></a>
@@ -123,10 +129,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           Maoyuan LI<br>
         </div>
         <div id="my-title" class="text-grey-light">
-          Advanced Wireless and Communication Research Center, University of Electro-Communications
+          Advanced Wireless & Communication Research Center<br> University of Electro-Communications
         </div>
         <div id="my-email" class="text-grey-light">
-          事已至此，先吃饭吧
+          Permanent head. Damage.
         </div>
 
 	</div>
@@ -258,6 +264,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<i class="fa fa-home" aria-hidden="true"></i>
 				<strong>News</strong>
 			</h3>
+
+    <div style="display: flex; align-items: flex-start; margin-bottom: 6px; text-align: left;">
+       <div style="width: 140px; text-align: left !important;"><b>2025/12/01</b></div>
+       <div style="flex: 1; text-align: justify;">
+       <b>We have one paper entitled Inductive Coupling Wireless Power Transfer for Implantable Devices: Impact of Eddy Current accepted by <a href="https://www.eucap2026.org/#" target="_blank">Eucap2026.</a></b>
+      </div>
+    </div>
+
+
 		<div style="display: flex; align-items: flex-start; margin-bottom: 6px; text-align: left;">
        <div style="width: 140px; text-align: left !important;"><b>2025/12/01</b></div>
        <div style="flex: 1; text-align: justify;">
@@ -748,6 +763,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 <ol class="pub-list">
 
+  
+    <li class="pub-item">
+    <div class="title">
+      Inductive Coupling Wireless Power Transfer for Implantable Devices: Impact of Eddy Current (Accepted)
+    </div>
+
+    <div class="authors">
+      <font style="font-size:11pt;">
+        <b>Maoyuan Li</b>,  Yumiao He, Kun Li, Takahiro Aoyagi, Ilangko Balasingham.
+      </font>
+    </div>
+
+    <div class="publish">
+       European Conference on Antennas and Propagation (EuCAP), 2026.
+
+      <!-- Google Scholar -->
+      <a href="https://scholar.google.com/scholar?hl=zh-CN&as_sdt=0%2C5&authuser=1&q=Inductive+Coupling+Wireless+Power+Transfer+for+Implantable+Devices%3A+Impact+of+Eddy+Current&btnG="
+         target="_blank" style="margin-left:6px;">
+        <i class="ai ai-google-scholar-square" style="font-size:16px; vertical-align:middle;"></i>
+      </a>
+    </div>
+  </li>
+  
   <li class="pub-item">
     <div class="title">
       A Suitable Metric for Maximum Received Power of Deep-Tissue Implantable Devices
@@ -1164,3 +1202,4 @@ jQuery(document).ready(function() {
 
 <!--<script src="custom-pub.js"></script>-->
 </html>
+
