--- a/index_CN.html
+++ b/index_CN.html
@@ -100,10 +100,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </svg>
   </a>
 
-   <div style="position:absolute; top:10px; right:20px;">
-      <a href="index.html" style="margin-right:10px; font-weight:bold;">EN</a>
-      <a href="index_cn.html" style="font-weight:bold;">中文</a>
-    </div>
+   <header class="site-header" style="position: relative;">
+  <div style="position:absolute; top:10px; right:20px; z-index: 1000;">
+    <a href="index.html" style="margin-right:10px; font-weight:bold;">EN</a>
+    <a href="index_CN.html" style="font-weight:bold;">中文</a>
+  </div>
+  ...
+
 
   <div class="trigger">
     <a class="page-link" href="#bio"><b>简介</b></a>
