--- a/index_CN.html
+++ b/index_CN.html
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
   ...
 
-
+   </header>
   <div class="trigger">
     <a class="page-link" href="#bio"><b>简介</b></a>
     <a class="page-link" href="#timeline"><b>经历</b></a>
