--- a/index_CN.html
+++ b/index_CN.html
@@ -88,37 +88,48 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
 <!-- End Google Tag Manager (noscript) -->
 
-    <header class="site-header">
+<header class="site-header" style="position: relative;">
 
   <div class="wrapper">
-<nav class="site-nav">
-  <a href="#" class="menu-icon">
-    <svg viewBox="0 0 18 15">
-      <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-      <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-      <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-    </svg>
-  </a>
+    <nav class="site-nav">
 
-   <header class="site-header" style="position: relative;">
-  <div style="position:absolute; top:10px; right:20px; z-index: 1000;">
-    <a href="index.html" style="margin-right:10px; font-weight:bold;">EN</a>
-    <a href="index_CN.html" style="font-weight:bold;">中文</a>
-  </div>
-  ...
+      <!-- Mobile menu icon -->
+      <a href="#" class="menu-icon">
+        <svg viewBox="0 0 18 15">
+          <path fill="#424242"
+            d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
+          <path fill="#424242"
+            d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
+          <path fill="#424242"
+            d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
+        </svg>
+      </a>
 
-   </header>
-  <div class="trigger">
-    <a class="page-link" href="#bio"><b>简介</b></a>
-    <a class="page-link" href="#timeline"><b>经历</b></a>
-    <a class="page-link" href="#publications"><b>论文</b></a>
-    <a class="page-link" href="#project"><b>项目</b></a>
-    <a class="page-link" href="#academicservices"><b>学术服务</b></a>
-    <!--<a class="page-link" href="#otherprojects">Projects</a>-->
-    <!-- Button for Posts -->
+      <!-- Language switch (EN | 中文) -->
+      <div style="
+        position:absolute;
+        top:10px;
+        right:20px;
+        font-weight:bold;
+        z-index:1000;
+      ">
+        <a href="index.html">EN</a>
+        <span style="margin:0 6px;">|</span>
+        <a href="index_cn.html">中文</a>
+      </div>
+
+      <!-- Main navigation -->
+      <div class="trigger">
+        <a class="page-link" href="#bio"><b>简介>ji></a>
+        <a class="page-link" href="#timeline"><b>经历>ji></a>
+        <a class="page-link" href="#publications"><b>论文>lu></a>
+        <a class="page-link" href="#project"><b>项目>xi></a>
+        <a class="page-link" href="#academicservices"><b>学术服务>xu></a>
+      </div>
+
+    </nav>
   </div>
-</nav>
-  </div>
+
 </header>
 
   <div id="profile-cover" class="cover shallow-bg img-responsive"> 
