--- a/index_CN.html
+++ b/index_CN.html
@@ -115,7 +115,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       ">
         <a href="index.html">EN</a>
         <span style="margin:0 6px;">|</span>
-        <a href="index_cn.html">中文</a>
+        <a href="index_CN.html">中文</a>
       </div>
 
       <!-- Main navigation -->
