--- a/index_CN.html
+++ b/index_CN.html
@@ -105,7 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </svg>
       </a>
 
-      <!-- Language switch (EN | 中文) -->
+ <!-- Language switch (EN | 中文) -->
       <div style="
         position:absolute;
         top:10px;
@@ -121,10 +121,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Main navigation -->
       <div class="trigger">
         <a class="page-link" href="#bio"><b>简介>ji></a>
-        <a class="page-link" href="#timeline"><b>经历>ji></a>
-        <a class="page-link" href="#publications"><b>论文>lu></a>
-        <a class="page-link" href="#project"><b>项目>xi></a>
-        <a class="page-link" href="#academicservices"><b>学术服务>xu></a>
+        <a class="page-link" href="#timeline"><b>经历</b></a>
+        <a class="page-link" href="#publications"><b>论文</b></a>
+        <a class="page-link" href="#project"><b>项目</b></a>
+        <a class="page-link" href="#academicservices"><b>学术服务</b></a>
       </div>
 
     </nav>
