--- a/index_CN.html
+++ b/index_CN.html
@@ -120,12 +120,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <!-- Main navigation -->
       <div class="trigger">
-        <a class="page-link" href="#bio"><b>简介<b></a>
+        <div class="trigger">
+        <a class="page-link" href="#bio"><b>简介</b></a>
         <a class="page-link" href="#timeline"><b>经历</b></a>
         <a class="page-link" href="#publications"><b>论文</b></a>
         <a class="page-link" href="#project"><b>项目</b></a>
         <a class="page-link" href="#academicservices"><b>学术服务</b></a>
-      </div>
+        </div>
+       </div>
 
     </nav>
   </div>
