--- a/index.html
+++ b/index.html
@@ -1112,6 +1112,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="reviewer-column">IEEE Transactions on Power Electronics (TPEL)</div>
         <div class="reviewer-column">IEEE Transactions on Antennas and Propagations (TAP)</div>
         <div class="reviewer-column">IEEE Transactions on Biomedical Circuits and Systems (TBCAS)</div>
+        <div class="reviewer-column">IEEE Transactions on Industry Applications (TIAS)</div>
+		  
       </div>
 
        <div class="reviewer-title">Conference Referee:</div>
