--- a/index.html
+++ b/index.html
@@ -818,6 +818,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          target="_blank" style="margin-left:6px;">
         <i class="ai ai-google-scholar-square" style="font-size:16px; vertical-align:middle;"></i>
       </a>
+
+	  <!-- DOI -->
+      <a href="https://doi.org/10.23919/ISAP63122.2025.11362146"
+         target="_blank" style="margin-left:6px;">
+        <i class="ai ai-doi-square" style="font-size:16px; vertical-align:middle;"></i>
+      </a>
     </div>
   </li>
 
@@ -839,6 +845,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="https://scholar.google.com/scholar?q=Impedance+Matching+Method+of+Metasurface-Aided+Magnetic+Wireless+Power+Transfer+for+Deep+Implants"
          target="_blank" style="margin-left:6px;">
         <i class="ai ai-google-scholar-square" style="font-size:16px; vertical-align:middle;"></i>
+      </a>
+
+		   <!-- DOI -->
+      <a href="https://doi.org/10.23919/ISAP63122.2025.11362134"
+         target="_blank" style="margin-left:6px;">
+        <i class="ai ai-doi-square" style="font-size:16px; vertical-align:middle;"></i>
       </a>
     </div>
   </li>
